# colorify

./: Cargo.toml  README.md
src/: colors.rs  config.rs  display.rs  embedding.rs  main.rs  matcher.rs
